# VanityGen

./: .gitignore  CMakeLists.txt  README.md
src/: crypto_utility.cpp  crypto_utility.hpp  main.cpp
